# llm-speed

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  MANIFEST.in  QWEN.md  README.en.md  README.md  README.zh-CN.md  _config.yml  docker-compose.yml  index.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  robots.txt  setup.py  sitemap.xml
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: ci-docs.yml  ci.yml  coverage.yml  deploy-docs.yml  link-check.yml  pages.yml
.kiro/specs/cuda-llm-kernel-optimization/: design.md  requirements.md  tasks.md
_layouts/: default.html  page.html
assets/css/: style.css
assets/js/: main.js  search.js
benchmarks/: benchmark_attention.py  benchmark_gemm.py
changelog/: 2025-02-13_project-infrastructure.md  2025-02-27_flash-attention-double-buffering-and-int8-binding.md  2025-02-27_project-optimization.md  2025-02-27_spec-documentation-fixes.md  2026-03-13_docs-information-architecture-standardization.md  2026-03-13_workflow-cpu-safe-ci.md  CHANGELOG.md  CHANGELOG.zh-CN.md  README.md
cuda_llm_ops/: __init__.py  _cuda_llm_ops.pyi  bindings.cpp  profiler.py
deferred/: README.md  bf16-support.patch
docs/: README.md  api.md  deepwiki.md  index.md  package-lock.json  package.json  performance.md
docs/.vitepress/: COMPONENTS.md  config.ts
docs/.vitepress/components/: AlgorithmCard.vue  CodeDemo.vue  CodeDiff.vue  GPUSupport.vue  KernelCard.vue  MemoryCompare.vue  PerfChart.vue  RoadmapTimeline.vue
docs/.vitepress/composables/: useData.ts
docs/.vitepress/config/: builder.ts  head.ts  i18n.ts  navigation.ts  plugins.ts  site.ts  theme.ts
docs/.vitepress/data/: benchmarks.json  gpu-support.json  references.bib
docs/.vitepress/theme/: index.ts  style.css
docs/.vitepress/types/: components.ts
docs/api/: api-en.md  api-zh.md
docs/architecture/: architecture-en.md  architecture-zh.md
docs/changelog/: CHANGELOG.md  CHANGELOG.zh-CN.md  README.md
docs/en/: api.md  architecture.md  index.md  quickstart.md  troubleshooting.md
docs/en/architecture/: flash-attention.md  index.md  tensor-core-gemm.md
docs/en/release-notes/: changelog.md
docs/en/setup/: index.md
docs/en/tutorials/: troubleshooting.md
docs/scripts/: sync-changelog.mjs
docs/setup/: quickstart-en.md  quickstart-zh.md
docs/tutorials/: performance-en.md  performance-zh.md  troubleshooting-en.md  troubleshooting-zh.md
docs/zh/: index.md
docs/zh-CN/: api.md  performance.md  troubleshooting.md
docs/zh/architecture/: flash-attention.md  index.md  tensor-core-gemm.md
docs/zh/docs/api/: api-zh.md
docs/zh/docs/setup/: quickstart-zh.md
docs/zh/docs/tutorials/: troubleshooting-zh.md
docs/zh/release-notes/: changelog.md
docs/zh/setup/: index.md
docs/zh/tutorials/: performance.md
include/: common.cuh  online_softmax.cuh  pipeline.cuh  shared_memory.cuh  warp_primitives.cuh
notebooks/: llm-speed-demo.ipynb
openspec/: config.yaml
openspec/changes/archive/: README.md
openspec/changes/archive/2026-04-23-bf16-support/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-final-verification/: .openspec.yaml  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-flashattention-backward/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-project-closeout/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-project-closeout/specs/documentation-surface/: spec.md
openspec/changes/archive/2026-04-23-project-closeout/specs/engineering-workflow/: spec.md
openspec/changes/archive/2026-04-23-project-closeout/specs/project-presentation/: spec.md
openspec/changes/archive/2026-04-23-project-closeout/specs/python-interface/: spec.md
openspec/changes/archive/2026-04-23-project-closeout/specs/repository-governance/: spec.md
openspec/changes/archive/2026-04-27-final-cleanup/: change.md  tasks.md
openspec/specs/attention/: spec.md
openspec/specs/documentation-surface/: spec.md
openspec/specs/engineering-workflow/: spec.md
openspec/specs/gemm/: spec.md
openspec/specs/project-presentation/: spec.md
openspec/specs/python-interface/: spec.md
openspec/specs/repository-governance/: spec.md
python/: __init__.py  bindings.cpp  profiler.py
specs/: README.md
specs/api/: README.md
specs/product/: README.md  cuda-llm-kernel-optimization.md
specs/rfc/: 0001-core-architecture.md  0002-implementation-tasks.md  README.md
specs/testing/: README.md
src/: flash_attention.cu  hgemm_kernel.cu  naive_attention.cu  tensor_core_gemm.cu  tiled_attention.cu
tests/: conftest.py  test_attention.py  test_gemm.py  test_interface.py  test_profiler.py
