[build-system]
requires = ["setuptools>=45", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda_llm_ops"
version = "0.1.0"
description = "High-performance CUDA kernels for LLM inference"
requires-python = ">=3.8"

[tool.pytest.ini_options]
markers = [
    "cuda: mark test as requiring CUDA",
    "slow: mark test as slow running",
    "property: mark test as property-based test",
]
testpaths = ["tests"]
